pymfm/statefulset_redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pymfm-redis
spec:
  selector:
    matchLabels:
      run: pymfm-redis
  replicas: 1
  template:
    metadata:
      labels:
        run: pymfm-redis
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: pymfm-redis
          image: bitnami/redis
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 6379
          # readinessProbe:
          #   exec:
          #     command:
          #     - echo
          #     - hello
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
          #   timeoutSeconds: 3
          #   successThreshold: 1
          #   failureThreshold: 5
          # livenessProbe:
          #   exec:
          #     command:
          #     - echo
          #     - hello
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 3
          #   successThreshold: 1
          #   failureThreshold: 2
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
            limits:
              cpu: 1
              memory: 1000Mi
          volumeMounts:
            - name: redis-data
              mountPath: /bitnami/redis/data
            # - name: tmp1
            #   mountPath: /opt/bitnami/redis/logs
            # - name: tmp2
            #   mountPath: /opt/bitnami/redis/tmp
      # imagePullSecrets:
      #   - name: regcred
      restartPolicy: Always
      # volumes:
      # - name: tmp1
      #   emptyDir: {}
      # - name: tmp2
      #   emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
