pymfm/service_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: pymfm-api
  labels:
    run: pymfm-api-service
spec:
  # type: ClusterIP
  type: NodePort
  selector:
    run: pymfm-api
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
