pymfm/service_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: pymfm-redis
  labels:
    run: pymfm-redis-service
spec:
  type: ClusterIP
  # type: NodePort
  selector:
    run: pymfm-redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
